tests/baselines/reference/useRegexpGroups.errors.txt
useRegexpGroups.ts(15,39): error TS2339: Property 'groups' does not exist on type 'RegExpExecArray<["foo", "foo"], { bar: "foo"; }, { hasIndices: false; global: false; ignoreCase: false; multiline: false; dotAll: false; unicode: false; unicodeSets: false; sticky: false; }> | RegExpMatchArray<["foo", "foo"]>'.
  Property 'groups' does not exist on type 'RegExpMatchArray<["foo", "foo"]>'.


==== useRegexpGroups.ts (1 errors) ====
    let re = /(?<year>\d{4})-(?<month>\d{2})-(?<day>\d{2})/u;
    let result = re.exec("2015-01-02");
    
    let date = result[0];
    
    let year1 = result.groups.year;
    let year2 = result[1];
    
    let month1 = result.groups.month;
    let month2 = result[2];
    
    let day1 = result.groups.day;
    let day2 = result[3];
    
    let foo = "foo".match(/(?<bar>foo)/)!.groups.foo;
                                          ~~~~~~
!!! error TS2339: Property 'groups' does not exist on type 'RegExpExecArray<["foo", "foo"], { bar: "foo"; }, { hasIndices: false; global: false; ignoreCase: false; multiline: false; dotAll: false; unicode: false; unicodeSets: false; sticky: false; }> | RegExpMatchArray<["foo", "foo"]>'.
!!! error TS2339:   Property 'groups' does not exist on type 'RegExpMatchArray<["foo", "foo"]>'.